kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django
spec:
    replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - image: oxigenocc/oxigeno.cc:latest
          name: django
          ports:
            - containerPort: 8000
              name: gunicorn
